# 00_Code

./: .gitignore  .gitmodules  VdP_CBO_DoE.yaml  adjoint_master_file.py  adjoint_master_file_multiple_parameters.py  adjoint_master_file_multiple_parameters_autodiff.py  adjoint_ode.py  adjoint_ode_opt.py  best.txt  bouncing_ball.py  doe_helper.py  euler.py  experiment_results.txt  flax_own_models.py  flax_vs_by_hand.py  fmu_helper.py  node_1d.py  optax_test.py  optimizer_utils.py  plot_results.py  readme.txt  requirements.txt  script.py  sgd_for_scipy.py  solve_ode_with_jax.py  torchdiffeq_example.py  training_in_the_loop  training_in_the_loop.py  utils.py  vdp.py  vdp_adjoint_by_hand_mu.py  vdp_adjoint_via_autodiff_mu.py  vdp_direct_training_NN.py  vdp_direct_training_by_hand_mu.py  vdp_direct_training_via_autodiff_mu.py
01_Informed_Simulators/: adjoint_ode.py
01_direct_training/: plot_results_.py  vdp_direct_training_NN.py
02_FMPy/: fmpy_masterfile_vdp_damping_input.py  modelexchange.py
02_adjoint_gradient_descent/: vdp_adjoint_NN.py
03_Amesim/: ErrorMessage.txt  README.md  amehyb_vdp.py  amehyb_vdp_db.py
03_adjoint_scipy_minimize/: adjoint_master_file_NN.py  adjoint_master_file_multiple_parameters.py
05_CBO/: 00_simple_cbo.py  02_cbo_nn.py  utils.py  (+18 more)
05_CBO/cbo_in_python/: pyproject.toml
05_CBO/cbo_in_python/src/: datasets.py
05_CBO/cbo_in_python/src/jax_/: cbo.py  models.py  optimizer.py  particle.py
05_CBO/cbo_in_python/src/torch/: models.py  optimizer.py  particle.py
05_CBO/cbo_in_python/src/torch_/: cbo.py  models.py  optimizer.py  particle.py
(+1224 files in other folders)
